--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
           ssh-add key.pem
 
       - name: Git Pull to Server
-        run: ssh -p 6789 -o StrictHostKeyChecking=no devwm9509@samudrawasesa.co.id 'cd /home/dev-wms.samudrawasesa.co.id/wms-samudra && git pull'
+        run: ssh -o StrictHostKeyChecking=no -p 6789 samudrawasesa@samudrawasesa.co.id 'cd /home/dev-wms.samudrawasesa.co.id/wms-samudra && git pull'
